# rotors_simulator

./: .gitignore  README.md
learn2soar/: .gitignore  Analytical_model.ipynb  CMakeLists.txt  Glider_position_x_y.xml  NN_dynamics_fit.ipynb  README.md  build.sh  contr_test.sh  keyb_to_soar.sh  kill.sh  learn2soar.sh  learn_to_go_straight.sh  learn_to_soar.sh  package.xml  reset.sh  setup.py  simulate.sh  tb.sh
learn2soar/.ipynb_checkpoints/: Analytical_model-checkpoint.ipynb
learn2soar/demonstrations/: comments.txt  energy_rudd_run000.npz  energy_rudd_run001.npz  energy_rudd_run002.npz  seb_run000.npz  seb_run000.nrm.npz  seb_run014.npz  seb_run014.nrm.npz
learn2soar/rotors_gym_envs/: __init__.py  l2s_energy_env_rudd_v1.py  l2s_energy_env_v1.py
learn2soar/scripts/: albatross_by_wire.py  controller.py  controller_node.py  get_model_dynamics.py  greedy_albatross_v0.py  gym_controller_test.py  imitate_to_soar.py  keyb_to_soar.py  l2s_energy_v0.py  l2s_energy_v1.1.py  l2s_energy_v1.py  learn2soar.py  learn_to_albatross_v0.py  learn_to_albatross_v1.py  learn_to_circle.py  learn_to_go_straight.py  learn_to_soar.py  listener.py  manual_albatross.py  manual_albatross_rudd.py  mouse_to_soar.py  mve_ddpg.py  mve_policy.py  mve_to_soar.py  mve_to_soar_rudd.py  pred_dataset.py  sarsa_to_soar.py  teach_to_soar.py  teach_to_soar_rudd.py
rotors_gazebo_plugins/: CMakeLists.txt  package.xml
rotors_gym/: CMakeLists.txt  package.xml  setup.py
teleop/: CMakeLists.txt  package.xml
teleop/launch/: mouse_teleop.launch
teleop/msg/: TwoTuple.msg
teleop/scripts/: mouse_teleop.py
(+40 files in other folders)
